<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/listPreferredItemHeight">

        <TextView
            style="@style/AppTheme.LeftColumnTextView"
            android:text="@string/from_xxx" />

        <TextView
            android:id="@+id/from"
            style="@style/AppTheme.FormText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@android:color/white"
            tools:text="Avellino" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/listPreferredItemHeight">

        <TextView
            style="@style/AppTheme.LeftColumnTextView"
            android:text="@string/to_xxx" />

        <TextView
            android:id="@+id/to"
            style="@style/AppTheme.FormText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@android:color/white"
            tools:text="Fisciano" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/listPreferredItemHeight">

        <TextView
            style="@style/AppTheme.LeftColumnTextView"
            android:text="@string/on_xxx" />

        <TextView
            android:id="@+id/on"
            style="@style/AppTheme.FormText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@android:color/white"
            tools:text="28 december 2014" />
    </LinearLayout>

</LinearLayout>